[gd_scene load_steps=4 format=3 uid="uid://cep0585ysmfjj"]

[ext_resource type="Texture2D" uid="uid://b7irxn73ed08n" path="res://art/minigame/card_clubs_02.png" id="1_5ywah"]
[ext_resource type="Script" path="res://Scenes/minigame/playing_card.gd" id="1_tyhun"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66y7w"]
size = Vector2(42, 59)

[node name="PlayingCard" type="Node2D"]
script = ExtResource("1_tyhun")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5ywah")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_66y7w")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
